{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 900,
  "lineage": "19c0be75-ab07-0077-e8b4-e353cec17311",
  "resources": [
    {
      "module": "module.bastion.module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e3c4a339a264cc9",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-02c65374fcbe09116",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c65374fcbe09116",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0573e55e08a86c95d",
            "private_dns": "ip-10-0-101-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.234",
            "public_dns": "ec2-54-221-5-26.compute-1.amazonaws.com",
            "public_ip": "54.221.5.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060733b6eee69838b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ece3026fe0ad32",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "bastion-host"
            },
            "vpc_security_group_ids": [
              "sg-0b424f3caf7f5d0fd"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.bastion.module.bastion.aws_iam_instance_profile.this",
            "module.bastion.module.bastion.aws_iam_role.this",
            "module.bastion.module.bastion.data.aws_iam_policy_document.assume_role_policy",
            "module.bastion.module.bastion.data.aws_partition.current",
            "module.bastion.module.bastion.data.aws_ssm_parameter.this",
            "module.security_groups.module.bastion_sg.aws_security_group.this",
            "module.security_groups.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.bastion_key"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:security-group/sg-0b424f3caf7f5d0fd",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b424f3caf7f5d0fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "208.184.176.210/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg-20250213170028282500000004",
            "name_prefix": "bastion-sg-",
            "owner_id": "050752615223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2655220570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b424f3caf7f5d0fd",
            "security_group_rule_id": "sgr-0dbe9ef34668d1ca7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.module.bastion_sg.aws_security_group.this",
            "module.security_groups.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups.module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "208.184.176.210/32"
            ],
            "description": "Allow SSH from my IP",
            "from_port": 22,
            "id": "sgrule-2352398818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b424f3caf7f5d0fd",
            "security_group_rule_id": "sgr-06a11bfa5cc15f50c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.data.http.my_ip",
            "module.security_groups.module.bastion_sg.aws_security_group.this",
            "module.security_groups.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups.module.worker_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:security-group/sg-098ad382493a50c91",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098ad382493a50c91",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b424f3caf7f5d0fd"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker-sg-20250213170028325300000005",
            "name_prefix": "worker-sg-",
            "owner_id": "050752615223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-sg"
            },
            "tags_all": {
              "Name": "worker-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.worker_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1275718120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-098ad382493a50c91",
            "security_group_rule_id": "sgr-02ee67a999dc276a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups.module.worker_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1246441423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098ad382493a50c91",
            "security_group_rule_id": "sgr-030ed35bfcb229d90",
            "self": false,
            "source_security_group_id": "sg-0b424f3caf7f5d0fd",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.module.bastion_sg.aws_security_group.this",
            "module.security_groups.module.bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:network-acl/acl-082dc7cc735551d0b",
            "default_network_acl_id": "acl-082dc7cc735551d0b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-082dc7cc735551d0b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "050752615223",
            "subnet_ids": [
              "subnet-03b9519b2dde829dd",
              "subnet-049ece3026fe0ad32",
              "subnet-05acf3a2607f3f669",
              "subnet-0f759c679ade8371b"
            ],
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:route-table/rtb-0d3036c43fed36a55",
            "default_route_table_id": "rtb-0d3036c43fed36a55",
            "id": "rtb-0d3036c43fed36a55",
            "owner_id": "050752615223",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:security-group/sg-019306dfc77f9c13a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-019306dfc77f9c13a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "050752615223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0841e56740da95d92",
            "arn": "arn:aws:ec2:us-east-1:050752615223:elastic-ip/eipalloc-0841e56740da95d92",
            "association_id": "eipassoc-06b2d3dfe7cf0d32b",
            "domain": "vpc",
            "id": "eipalloc-0841e56740da95d92",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b3d3d689ff6880c",
            "private_dns": "ip-10-0-101-217.ec2.internal",
            "private_ip": "10.0.101.217",
            "public_dns": "ec2-44-216-156-4.compute-1.amazonaws.com",
            "public_ip": "44.216.156.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041c581fb185742f1",
            "arn": "arn:aws:ec2:us-east-1:050752615223:elastic-ip/eipalloc-041c581fb185742f1",
            "association_id": "eipassoc-0a903afc9a4fc137e",
            "domain": "vpc",
            "id": "eipalloc-041c581fb185742f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c98f57a5d714fd4",
            "private_dns": "ip-10-0-102-65.ec2.internal",
            "private_ip": "10.0.102.65",
            "public_dns": "ec2-44-217-62-141.compute-1.amazonaws.com",
            "public_ip": "44.217.62.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:internet-gateway/igw-0eef6cdc98ba5aef0",
            "id": "igw-0eef6cdc98ba5aef0",
            "owner_id": "050752615223",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0841e56740da95d92",
            "association_id": "eipassoc-06b2d3dfe7cf0d32b",
            "connectivity_type": "public",
            "id": "nat-0ff1ffbba4d8bf548",
            "network_interface_id": "eni-00b3d3d689ff6880c",
            "private_ip": "10.0.101.217",
            "public_ip": "44.216.156.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049ece3026fe0ad32",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041c581fb185742f1",
            "association_id": "eipassoc-0a903afc9a4fc137e",
            "connectivity_type": "public",
            "id": "nat-00761a883ef515598",
            "network_interface_id": "eni-03c98f57a5d714fd4",
            "private_ip": "10.0.102.65",
            "public_ip": "44.217.62.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b9519b2dde829dd",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0878575faf7df08111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ff1ffbba4d8bf548",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0878575faf7df0811",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09eb34354a5151fe21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00761a883ef515598",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09eb34354a5151fe2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eef6cdc98ba5aef0",
            "id": "r-rtb-027f9d6209c79fda61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027f9d6209c79fda6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:route-table/rtb-0878575faf7df0811",
            "id": "rtb-0878575faf7df0811",
            "owner_id": "050752615223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff1ffbba4d8bf548",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:route-table/rtb-09eb34354a5151fe2",
            "id": "rtb-09eb34354a5151fe2",
            "owner_id": "050752615223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00761a883ef515598",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:route-table/rtb-027f9d6209c79fda6",
            "id": "rtb-027f9d6209c79fda6",
            "owner_id": "050752615223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eef6cdc98ba5aef0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abe6f95923df8a5d",
            "route_table_id": "rtb-0878575faf7df0811",
            "subnet_id": "subnet-05acf3a2607f3f669"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0972333f6937e88f1",
            "route_table_id": "rtb-09eb34354a5151fe2",
            "subnet_id": "subnet-0f759c679ade8371b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88a65ceaab6752d",
            "route_table_id": "rtb-027f9d6209c79fda6",
            "subnet_id": "subnet-049ece3026fe0ad32"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07de4c5d8a07789a7",
            "route_table_id": "rtb-027f9d6209c79fda6",
            "subnet_id": "subnet-03b9519b2dde829dd"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:subnet/subnet-05acf3a2607f3f669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05acf3a2607f3f669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752615223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:subnet/subnet-0f759c679ade8371b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f759c679ade8371b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752615223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:subnet/subnet-049ece3026fe0ad32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ece3026fe0ad32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752615223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:subnet/subnet-03b9519b2dde829dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b9519b2dde829dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752615223",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            },
            "vpc_id": "vpc-03791c0b3e74b460d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752615223:vpc/vpc-03791c0b3e74b460d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082dc7cc735551d0b",
            "default_route_table_id": "rtb-0d3036c43fed36a55",
            "default_security_group_id": "sg-019306dfc77f9c13a",
            "dhcp_options_id": "dopt-0a73bdbbae2864af4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03791c0b3e74b460d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3036c43fed36a55",
            "owner_id": "050752615223",
            "tags": {
              "Name": "console-scale-testing-vpc"
            },
            "tags_all": {
              "Name": "console-scale-testing-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workers.module.worker_nodes[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004dac467bb041dc7",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-06eb9cd181c8ef968",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06eb9cd181c8ef968",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0600361458646bee1",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02017b5805f0a911b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05acf3a2607f3f669",
            "tags": {
              "Name": "worker-node"
            },
            "tags_all": {
              "Name": "worker-node"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "worker-node"
            },
            "vpc_security_group_ids": [
              "sg-098ad382493a50c91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.workers.module.worker_nodes.aws_iam_instance_profile.this",
            "module.workers.module.worker_nodes.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.workers.module.worker_nodes[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004dac467bb041dc7",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-0f736685219ef13ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f736685219ef13ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0531d0df6a8c6befa",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f97372464f049733",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05acf3a2607f3f669",
            "tags": {
              "Name": "worker-node"
            },
            "tags_all": {
              "Name": "worker-node"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "worker-node"
            },
            "vpc_security_group_ids": [
              "sg-098ad382493a50c91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.workers.module.worker_nodes.aws_iam_instance_profile.this",
            "module.workers.module.worker_nodes.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.workers.module.worker_nodes[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004dac467bb041dc7",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-00994d4255d0ac51d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00994d4255d0ac51d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0b11e4f40ee2849",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049dcabb17111e529",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05acf3a2607f3f669",
            "tags": {
              "Name": "worker-node"
            },
            "tags_all": {
              "Name": "worker-node"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "worker-node"
            },
            "vpc_security_group_ids": [
              "sg-098ad382493a50c91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.workers.module.worker_nodes.aws_iam_instance_profile.this",
            "module.workers.module.worker_nodes.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.workers.module.worker_nodes[3]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004dac467bb041dc7",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-02147cdf5291a7ffa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02147cdf5291a7ffa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05cffa6c942dcb653",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e89eaeaff641837",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05acf3a2607f3f669",
            "tags": {
              "Name": "worker-node"
            },
            "tags_all": {
              "Name": "worker-node"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "worker-node"
            },
            "vpc_security_group_ids": [
              "sg-098ad382493a50c91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.workers.module.worker_nodes.aws_iam_instance_profile.this",
            "module.workers.module.worker_nodes.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "module": "module.workers.module.worker_nodes[4]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004dac467bb041dc7",
            "arn": "arn:aws:ec2:us-east-1:050752615223:instance/i-0205b35545792eb47",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0205b35545792eb47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0326f40db2259ca41",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ff0680b85c5b8ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05acf3a2607f3f669",
            "tags": {
              "Name": "worker-node"
            },
            "tags_all": {
              "Name": "worker-node"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "worker-node"
            },
            "vpc_security_group_ids": [
              "sg-098ad382493a50c91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.bastion_key",
            "module.security_groups.module.worker_sg.aws_security_group.this",
            "module.security_groups.module.worker_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.workers.module.worker_nodes.aws_iam_instance_profile.this",
            "module.workers.module.worker_nodes.data.aws_ssm_parameter.this"
          ]
        }
      ]
    }
  ]
}